--- a/src/main/resources/com/example/librarymanagement/call-card-management.fxml
+++ b/src/main/resources/com/example/librarymanagement/call-card-management.fxml
@@ -142,6 +142,22 @@
                               <Insets bottom="15.0" left="10.0" right="10.0" />
                            </VBox.margin>
                         </TextField>
+                        <Label text="Hạn trả">
+                           <VBox.margin>
+                              <Insets left="10.0" right="10.0" />
+                           </VBox.margin>
+                           <font>
+                              <Font size="18.0" />
+                           </font>
+                        </Label>
+                        <TextField fx:id="tFReturnDeadline" disable="true">
+                           <VBox.margin>
+                              <Insets bottom="15.0" left="10.0" right="10.0" />
+                           </VBox.margin>
+                           <font>
+                              <Font size="16.0" />
+                           </font>
+                        </TextField>
                      </children>
                   </VBox>
                </content>
@@ -190,7 +206,7 @@
                         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                      </rowConstraints>
                   </GridPane>
-                  <Button fx:id="bExtend" mnemonicParsing="false" onAction="#onExitButtonClick" prefHeight="40.0" prefWidth="388.0" text="Thoát" GridPane.rowIndex="2">
+                  <Button fx:id="bExit" mnemonicParsing="false" onAction="#onExitButtonClick" prefHeight="40.0" prefWidth="388.0" text="Thoát" GridPane.rowIndex="2">
                      <GridPane.margin>
                         <Insets left="10.0" right="10.0" />
                      </GridPane.margin>
@@ -281,7 +297,7 @@
                                     <Font size="16.0" />
                                  </font>
                                  <HBox.margin>
-                                    <Insets bottom="10.0" left="53.0" right="10.0" top="10.0" />
+                                    <Insets bottom="10.0" left="58.0" right="10.0" top="10.0" />
                                  </HBox.margin>
                               </TextField>
                            </children>
@@ -321,7 +337,7 @@
                                     <Font size="16.0" />
                                  </font>
                                  <HBox.margin>
-                                    <Insets bottom="10.0" left="60.0" right="10.0" top="10.0" />
+                                    <Insets bottom="10.0" left="65.0" right="10.0" top="10.0" />
                                  </HBox.margin>
                               </TextField>
                            </children>
@@ -361,7 +377,7 @@
                                     <Font size="16.0" />
                                  </font>
                                  <HBox.margin>
-                                    <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                                    <Insets bottom="10.0" left="15.0" right="10.0" top="10.0" />
                                  </HBox.margin>
                               </TextField>
                            </children>
@@ -382,6 +398,26 @@
                                  </font>
                                  <HBox.margin>
                                     <Insets bottom="10.0" left="15.0" right="10.0" top="10.0" />
+                                 </HBox.margin>
+                              </TextField>
+                           </children>
+                        </HBox>
+                        <HBox prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="3">
+                           <children>
+                              <Label text="Số lượng mượn*:">
+                                 <font>
+                                    <Font size="18.0" />
+                                 </font>
+                                 <HBox.margin>
+                                    <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                                 </HBox.margin>
+                              </Label>
+                              <TextField fx:id="tFNumberLoadBook" disable="true" prefHeight="37.0" prefWidth="356.0">
+                                 <font>
+                                    <Font size="16.0" />
+                                 </font>
+                                 <HBox.margin>
+                                    <Insets bottom="10.0" right="10.0" top="10.0" />
                                  </HBox.margin>
                               </TextField>
                            </children>
@@ -431,15 +467,10 @@
             </GridPane>
          </top>
          <center>
-            <TableView onMouseClicked="#handleRowSelect" prefHeight="546.0" prefWidth="1103.0" BorderPane.alignment="CENTER">
+            <TableView fx:id="tVCallCard" onMouseClicked="#handleRowSelect" prefHeight="546.0" prefWidth="1103.0" BorderPane.alignment="CENTER">
               <columns>
                 <TableColumn fx:id="idCol" prefWidth="75.0" text="MÃ SÁCH" />
-                <TableColumn fx:id="nameCol" prefWidth="75.0" text="TÊN SÁCH" />
-                  <TableColumn fx:id="authorCol" prefWidth="75.0" text="TÊN TÁC GIẢ" />
-                  <TableColumn fx:id="CategoryCol" prefWidth="75.0" text="THỂ LOẠI" />
-                  <TableColumn fx:id="PublishingCompanyCol" prefWidth="75.0" text="NHÀ XUẤT BẢN" />
-                  <TableColumn fx:id="PublishingCol" prefWidth="187.0" text="NĂM XUẤT BẢN" />
-                  <TableColumn fx:id="ReprintTimesCol" prefWidth="128.0" text="LẦN XUẤT BẢN" />
+                  <TableColumn fx:id="numberLoanBookCol" prefWidth="75.0" text="SỐ LƯỢNG" />
               </columns>
                <columnResizePolicy>
                   <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
